# The_Shadow_Cat

./: .gitignore  CMakeLists.txt  FRASES.md  GDD.md  README.md  TODOANIMATIONS.txt  TODOLIST.md  local_config.cmake.example
Assets/AnimationData/: BlockAnim.json  OrangeBossAnim.json  OrangeCatAnim.json  ShadowCatAnim.json  StompAnim.json  SylvesterCatAnim.json  WhiteCatAnim.json
Assets/Data/Animation/: AttackTrailAnim.json  BossHealingAnim.json  DummyAnim.json  FurBallAnim.json  OrangeBossAnim.json  OrangeCatAnim.json  ShadowCatAnim.json  SylvesterBossAnim.json  SylvesterCatAnim.json  UpgradeTreatAnim.json  WhiteBombAnim.json  WhiteBossAnim.json  WhiteBubbleAnim.json  WhiteCatAnim.json  WhiteSlashAnim.json
Assets/Data/Character/: OrangeBossData.json  OrangeCatData.json  SylvesterBossData.json  SylvesterCatData.json  WhiteBossData.json  WhiteCatData.json
Assets/Data/Skill/: BasicAttackData.json  BossHealingData.json  ClawAttackData.json  DashData.json  FurBallData.json  ShadowFormData.json  StompData.json  WhiteBombData.json  WhiteBubbleData.json  WhiteSlashData.json
Assets/HUD/: Cards.aseprite  Cursor.aseprite  ItemSlot.aseprite  LifeBar.aseprite
Assets/HUD/BossFight/: BossLifeBar.aseprite
Assets/HUD/Cards/: Cards.aseprite
Assets/HUD/Menu/: Keyboard.aseprite  Scroll.aseprite
Assets/HUD/ShadowCat/: ItemSlot.aseprite
Assets/Icons/: Cursor.aseprite
Assets/Levels/: MapTaleset.aseprite  MapTaleset.json  MapTaleset.tsx  MapTileset.aseprite  MapTileset.json  MapTileset.tsx
Assets/Levels/Level1/: Level1.csv  Level1.tmx  Level1Background.tmx
Assets/Levels/Level1-1/: level1-1.csv
Assets/Levels/Level1_Boss/: Level1_Boss.csv  Level1_Boss.tmx  Level1_Boss_Background.tmx
Assets/Levels/Level2/: Level2.csv  Level2.tmx  Level2Background.tmx
Assets/Levels/Level2_Boss/: Level2_Boss.csv  Level2_Boss.tmx  Level2_Boss_Background.tmx
Assets/Levels/Level3/: Level3.csv  Level3.tmx  Level3Background.tmx
Assets/Levels/Level3_Boss/: Level3_Boss.csv  Level3_Boss.tmx  Level3_Boss_Background.tmx
Assets/Levels/Lobby/: Lobby.aseprite  Lobby.csv  Lobby.tmx  Lobby.tsx  LobbyBackground.aseprite  LobbyBackground.tmx
Assets/Sprites/AttackBoss/: WhiteLight.aseprite  WhiteLight.json  WhiteSlash.aseprite
Assets/Sprites/AttackCat/: BombAttack.aseprite  BubbleAttack.aseprite  Heal.aseprite  LightAttack.aseprite  ShildAttack.aseprite  SlashAttack.aseprite  XAttack.aseprite
Assets/Sprites/AttackShadowCat/: BombAttack.aseprite  BubbleAttack.aseprite  LightAttack.aseprite  ShildAttack.aseprite  SonnarAttack.aseprite  XAttack.aseprite
Assets/Sprites/AttackTrail/: AttackTrail.aseprite  AttackTrail.json  WhiteBomb.aseprite  WhiteBomb.json
Assets/Sprites/AttackTrailBoss/: BossHealing.aseprite  BossHealing.json  BossShild.aseprite  BossShild.json  WhiteBubble.aseprite  WhiteBubble.json  WhiteSlash.json
Assets/Sprites/Blocks/: Blocks.aseprite  Blocks.json
Assets/Sprites/Dummy/: Dummy.aseprite  Dummy.json
Assets/Sprites/Floor/: Floor.aseprite  Floor.json  Floor.tsx
Assets/Sprites/FurBall/: FurBall.aseprite  FurBall.json
Assets/Sprites/Mario/: Mario.json
Assets/Sprites/NoTexture/: NoTexture.aseprite  NoTexture.json
Assets/Sprites/OrangeBoss/: OrangeBoss.aseprite  OrangeBoss.json
Assets/Sprites/OrangeCat/: OrangeCat.aseprite  OrangeCat.json
Assets/Sprites/ShadowCat/: ShadowCat.aseprite  ShadowCat.json  ShadowCat0.aseprite  ShadowCat1.aseprite
Assets/Sprites/Stomp/: Stomp.aseprite  Stomp.json
Assets/Sprites/SylvesterBoss/: SylvesterBoss.aseprite  SylvesterBoss.json
Assets/Sprites/SylvesterCat/: SylvesterCat.aseprite  SylvesterCat.json
Assets/Sprites/Treat/: UpgradeTreat.aseprite  UpgradeTreat.json
Assets/Sprites/Treats/: UpgradeTreat.aseprite
Assets/Sprites/WhiteBoss/: WhiteBoss.aseprite  WhiteBoss.json
Assets/Sprites/WhiteCat/: WhiteCat.aseprite  WhiteCat.json
Shaders/: Base.frag  Base.vert  Sprite.frag  Sprite.vert
Source/: AudioSystem.cpp  AudioSystem.h  DelayedActionSystem.cpp  DelayedActionSystem.h  Event.h  Game copy.cpp  Game.cpp  Game.h  GameConstants.h  GameJsonParser.cpp  GameJsonParser.h  GameRenderer.cpp  GameRenderer.h  InputHandler.cpp  InputHandler.h  LevelManager.cpp  LevelManager.h  Math.cpp  Math.h  Random.cpp  Random.h  SceneManager.cpp  SceneManager.h  SkillFactory.cpp  SkillFactory.h  SkillJsonParser.cpp  SkillJsonParser.h  SystemInitializer.cpp  SystemInitializer.h
Source/AI/: AIBehavior.cpp  AIBehavior.h  AIStateMachine.cpp  AIStateMachine.h
Source/AI/Behaviors/: AttackBehavior.cpp  AttackBehavior.h  ChaseBehavior.cpp  ChaseBehavior.h  FleeBehavior.cpp  FleeBehavior.h  PatrolBehavior.cpp  PatrolBehavior.h  SkillBehavior.cpp  SkillBehavior.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Character.cpp  Character.h  DebugActor.cpp  DebugActor.h  Goomba.cpp  Goomba.h  LevelPortal.cpp  LevelPortal.h  Mario.cpp  Mario.h  ShadowCat.cpp  ShadowCat.h  Spawner.cpp  Spawner.h  UpgradeTreat.cpp  UpgradeTreat.h
Source/Actors/Characters/: BaseEnemy.cpp  BaseEnemy.h  BasicEnemy.cpp  BasicEnemy.h  Boss.cpp  Boss.h  BossBase.cpp  BossBase.h  Character.cpp  Character.h  Dummy.cpp  Dummy.h  Enemy.cpp  Enemy.h  EnemyBase.cpp  EnemyBase.h  ShadowCat.cpp  ShadowCat.h
Source/Components/: AnimatedParticleSystemComponent.cpp  AnimatedParticleSystemComponent.h  Component.cpp  Component.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DrawComponent.cpp  DrawComponent.h  RectComponent.cpp  RectComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  Collider.cpp  Collider.h  ColliderComponent.cpp  ColliderComponent.h  CollisionFilter.h  Physics.cpp  Physics.h  PhysicsUtils.cpp  PhysicsUtils.h  (+2 more)
Source/Debug/: BossDebugDrawer.cpp  BossDebugDrawer.h  EnemyDebugDrawer.cpp  EnemyDebugDrawer.h
Source/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp
Source/UI/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIRect.cpp  UIRect.h  UIText.cpp  UIText.h
(+53 files in other folders)
