cmake_minimum_required(VERSION 3.26)
# Configurando o padrão c++
set(CMAKE_CXX_STANDARD 17)

# Configurando o nome e executável do projeto
set(PROJECT_NAME "the_shadow_cat")
project(${PROJECT_NAME})

# Include local configuration (each person creates their own)
if(EXISTS "${CMAKE_SOURCE_DIR}/local_config.cmake")
    include(local_config.cmake)
else()
    message(FATAL_ERROR "Please copy local_config.cmake.example to local_config.cmake and configure your library paths")    
endif()

add_executable(${PROJECT_NAME}
        Source/Renderer/Shader.cpp
        Source/Renderer/Shader.h
        Source/Main.cpp
        Source/Math.cpp
        Source/Math.h
        Source/Random.cpp
        Source/Random.h
        Source/Game.cpp
        Source/Game.h
        Source/Actors/Actor.cpp
        Source/Actors/Actor.h
        Source/Components/Component.cpp
        Source/Components/Component.h
        Source/Components/Drawing/DrawComponent.cpp
        Source/Components/Drawing/DrawComponent.h
        Source/Components/Physics/RigidBodyComponent.cpp
        Source/Components/Physics/RigidBodyComponent.h
        Source/Components/Physics/ColliderComponent.cpp
        Source/Components/Physics/ColliderComponent.h
        Source/Components/ParticleSystemComponent.cpp
        Source/Components/ParticleSystemComponent.h
        Source/Renderer/Renderer.cpp
        Source/Renderer/Renderer.h
        Source/Renderer/VertexArray.h
        Source/Renderer/VertexArray.cpp
        Source/Renderer/Texture.cpp
        Source/Renderer/Texture.h
        Source/Actors/Block.cpp
        Source/Actors/Block.h
        Source/Actors/Spawner.cpp
        Source/Actors/Spawner.h
        Source/Actors/LevelPortal.cpp
        Source/Actors/LevelPortal.h
        Source/Components/Drawing/AnimatorComponent.cpp
        Source/Components/Drawing/AnimatorComponent.h
        Source/Components/Drawing/RectComponent.cpp
        Source/Components/Drawing/RectComponent.h
        Source/AudioSystem.cpp
        Source/AudioSystem.h
        Source/Renderer/Font.h
        Source/Renderer/Font.cpp
        Source/UI/UIButton.cpp
        Source/UI/UIButton.h
        Source/UI/UIElement.cpp
        Source/UI/UIElement.h
        Source/UI/UIImage.cpp
        Source/UI/UIImage.h
        Source/UI/Screens/UIScreen.cpp
        Source/UI/Screens/UIScreen.h
        Source/UI/UIText.cpp
        Source/UI/UIText.h
        Source/UI/Screens/HUD.cpp
        Source/UI/Screens/HUD.h
        Source/UI/Screens/TutorialHUD.cpp
        Source/UI/Screens/TutorialHUD.h
        Source/UI/Screens/UpgradeHUD.cpp
        Source/UI/Screens/UpgradeHUD.h
        Source/UI/UIRect.cpp
        Source/UI/UIRect.h
        Source/UI/Screens/MainMenu.cpp
        Source/UI/Screens/MainMenu.h
        Source/UI/Screens/GameOver.cpp
        Source/UI/Screens/GameOver.h
        Source/UI/Screens/WinScreen.cpp
        Source/UI/Screens/WinScreen.h
        Source/Actors/Characters/ShadowCat.cpp
        Source/Actors/Characters/ShadowCat.h
        Source/Components/Skills/SkillBase.cpp
        Source/Components/Skills/SkillBase.h
        Source/Components/Skills/BasicAttack.cpp
        Source/Components/Skills/BasicAttack.h
        Source/Components/Skills/SkillInputHandler.cpp
        Source/Components/Skills/SkillInputHandler.h
        Source/Actors/Characters/Boss.cpp
        Source/Actors/Characters/Boss.h
        Source/Actors/Characters/Character.cpp
        Source/Actors/Characters/Character.h
        Source/Actors/Characters/Dummy.cpp
        Source/Actors/Characters/Dummy.h
        Source/GameConstants.h
        Source/Components/Physics/Physics.cpp
        Source/Components/Physics/Physics.h
        Source/Actors/DebugActor.cpp
        Source/Actors/DebugActor.h
        Source/Components/AnimatedParticleSystemComponent.cpp
        Source/Components/AnimatedParticleSystemComponent.h
        Source/Components/Skills/Dash.cpp
        Source/Components/Skills/Dash.h
        Source/Components/Physics/CollisionFilter.h
        Source/Components/Skills/Stomp.cpp
        Source/Components/Skills/Stomp.h
        Source/Components/Physics/Collider.cpp
        Source/Components/Physics/Collider.h
        Source/Components/Skills/ClawAttack.cpp
        Source/Components/Skills/ClawAttack.h
        Source/Components/Skills/FurBall.cpp
        Source/Components/Skills/FurBall.h
        Source/Components/Skills/WhiteSlash.cpp
        Source/Components/Skills/WhiteSlash.h
        Source/Components/Skills/WhiteBomb.cpp
        Source/Components/Skills/WhiteBomb.h
        Source/Components/Skills/WhiteBubble.cpp
        Source/Components/Skills/WhiteBubble.h
        Source/Components/Skills/BossHealing.cpp
        Source/Components/Skills/BossHealing.h
        Source/Debug/EnemyDebugDrawer.cpp
        Source/Debug/EnemyDebugDrawer.h
        Source/DelayedActionSystem.cpp
        Source/DelayedActionSystem.h
        Source/GameJsonParser.cpp
        Source/GameJsonParser.h
        Source/SkillFactory.cpp
        Source/SkillFactory.h
        Source/Components/Skills/UpgradeInfo.h
        Source/Components/Skills/Bomb.cpp
        Source/Components/Skills/Bomb.h
        Source/Components/Skills/ShadowForm.cpp
        Source/Components/Skills/ShadowForm.h
        Source/Debug/BossDebugDrawer.cpp
        Source/Debug/BossDebugDrawer.h
        Source/Actors/Characters/EnemyBase.cpp
        Source/Actors/Characters/EnemyBase.h
        Source/AI/AIStateMachine.cpp
        Source/AI/AIStateMachine.h
        Source/AI/AIBehavior.cpp
        Source/AI/AIBehavior.h
        Source/Actors/Characters/Enemies/WhiteCat.cpp
        Source/Actors/Characters/Enemies/WhiteCat.h
        Source/AI/Behaviors/PatrolBehavior.cpp
        Source/AI/Behaviors/PatrolBehavior.h
        Source/AI/Behaviors/ChaseBehavior.cpp
        Source/AI/Behaviors/ChaseBehavior.h
        Source/AI/Behaviors/SkillBehavior.cpp
        Source/AI/Behaviors/SkillBehavior.h
        Source/Actors/Characters/BossBase.cpp
        Source/Actors/Characters/BossBase.h
        Source/Actors/Characters/Enemies/WhiteBoss.cpp
        Source/Actors/Characters/Enemies/WhiteBoss.h
        Source/Actors/Characters/Enemies/SylvesterBoss.cpp
        Source/Actors/Characters/Enemies/SylvesterBoss.h
        Source/Actors/Characters/Enemies/OrangeBoss.cpp
        Source/Actors/Characters/Enemies/OrangeBoss.h
        Source/Actors/UpgradeTreat.cpp
        Source/Actors/UpgradeTreat.h
        Source/AI/Behaviors/FleeBehavior.cpp
        Source/AI/Behaviors/FleeBehavior.h
        Source/Actors/Characters/Enemies/OrangeCat.cpp
        Source/Actors/Characters/Enemies/OrangeCat.h
        Source/Actors/Characters/Enemies/SylvesterCat.cpp
        Source/Actors/Characters/Enemies/SylvesterCat.h
        Source/SystemInitializer.cpp
        Source/SystemInitializer.h
        Source/LevelManager.cpp
        Source/LevelManager.h
        Source/InputHandler.cpp
        Source/InputHandler.h
        Source/SceneManager.cpp
        Source/SceneManager.h
)

configure_local_linking(${PROJECT_NAME})